Fix: resolve white screen crash by adding defensive checks in PremiumGate and missing translations

--- a/frontend/locales/en.json
+++ b/frontend/locales/en.json
@@ -354,6 +354,15 @@
           "Targeted WhatsApp marketing campaigns",
           "Customer debt and credit management"
         ]
+      },
+      "reports": {
+        "title": "Analysis & Reports",
+        "desc": "Visualize your business performance with detailed charts.",
+        "benefits": [
+          "Unlimited PDF/CSV export",
+          "Full sales history",
+          "Advanced profitability analysis"
+        ]
       }
     }
   },
