Hardening UI: fixed white screen crashes, unsafe toLocaleString, and localized hardcoded strings

--- a/frontend/locales/fr.json
+++ b/frontend/locales/fr.json
@@ -456,8 +456,22 @@
     "see_feature": "Voir cette fonctionnalité",
     "preferences_error": "Impossible de mettre à jour vos préférences."
   },
+  "supplier": {
+    "dashboard_title": "Dashboard Fournisseur",
+    "rating": "Note",
+    "reviews": "Avis",
+    "pending_orders": "Commandes en attente",
+    "revenue_this_month": "CA ce mois",
+    "average_basket": "Panier moyen",
+    "active_clients": "Clients actifs",
+    "top_products": "Top Produits",
+    "recent_orders": "Commandes récentes",
+    "client_reviews": "Avis des clients"
+  },
   "products": {
     "title": "Produits",
+    "total_quantity": "Quantité Totale",
+    "total_revenue": "Revenu Total",
     "search": "Rechercher un produit...",
     "add_product": "Ajouter un produit",
     "products_total": "produits au total",
@@ -514,37 +528,15 @@
   },
   "orders": {
     "title": "Commandes",
-    "suppliers": "Fournisseurs",
-    "bulk": "Groupées",
-    "returns": "Retours",
-    "returns_credit_notes": "Retours & Avoirs",
-    "new_order": "Nouvelle Commande",
-    "validate_reception": "Valider la réception",
-    "all": "Toutes",
-    "pending": "En attente",
-    "confirmed": "Confirmée",
-    "shipped": "Expédiée",
-    "shipping": "En cours",
-    "received": "Reçue",
-    "delivered": "Livrée",
-    "cancelled": "Annulée",
-    "partially_delivered": "Partielle",
-    "approved": "Approuvé",
-    "completed": "Complété",
-    "rejected": "Rejeté",
-    "empty": "Aucune commande trouvée",
-    "details": "Détails",
+    "received_orders": "Commandes reçues",
+    "filter_by_shopkeeper": "Filtrer par commerçant",
     "order_detail": "Détail de la commande",
-    "items_count": "{{count}} article(s)",
+    "change_status_to": "Changer le statut en",
+    "client": "Client",
+    "status": "Statut",
+    "items": "Articles",
     "total": "Total",
-    "orders_count": "{{count}} commande(s)",
-    "returns_count": "{{count}} retour(s)",
-    "all_suppliers": "Tous les fournisseurs",
-    "active_credit_notes": "Avoirs actifs",
-    "credit_notes_count": "{{count}} avoir(s)",
-    "available": "disponible",
-    "no_returns": "Aucun retour",
-    "no_returns_desc": "Les retours apparaîtront ici",
+    "confirm_cancel": "Voulez-vous vraiment annuler ?",
     "no_orders": "Aucune commande",
     "no_orders_desc": "Créez votre première commande fournisseur",
     "no_orders_bulk_desc": "Aucune commande groupée en cours",
@@ -656,17 +648,28 @@
     "search_placeholder": "Rechercher un produit...",
     "cart": "Panier",
     "empty_cart": "Le panier est vide",
+    "cart_empty": "Le panier est vide",
     "clear": "Vider",
     "checkout": "Paiement",
+    "total": "Total",
+    "pay": "Payer",
     "cash": "Espèces",
     "mobile_money": "Mobile Money",
     "credit": "Vente à crédit",
     "insufficient_stock": "Stock insuffisant",
     "success": "Vente enregistrée",
+    "sale_success": "Vente enregistrée !",
     "credit_success": "Vente à crédit enregistrée avec succès.",
-    "sale_error": "Impossible d'enregistrer la vente",
+    "sale_error": "Erreur lors de la vente",
     "credit_select_client": "Veuillez sélectionner un client pour une vente à crédit.",
-    "credit_confirmation": "Confirmation Crédit",
+    "select_customer": "Sélectionner un client",
+    "credit_confirmation_title": "Confirmation Crédit",
+    "old_debt": "Ancienne dette",
+    "new_amount": "Nouveau montant",
+    "new_debt": "Nouvelle dette",
+    "confirm_credit_sale": "Confirmer la vente à crédit ?",
+    "anonymous_customer": "Client anonyme",
+    "change_not_supported": "Le rendu de monnaie n'est pas supporté pour le crédit.",
     "stock_depleted": "Stock épuisé",
     "sku_not_found": "Aucun produit trouvé avec le SKU:",
     "unknown": "Inconnu",
