feat: externalize hardcoded strings in accounting, products, settings, batch-scan and delivery modal

--- a/frontend/locales/fr.json
+++ b/frontend/locales/fr.json
@@ -60,6 +60,7 @@
     "payment_mobile_money": "Mobile Money",
     "payment_transfer": "Virement",
     "period_label": "Période :",
+    "last_days_label": "{{count}} derniers jours",
     "product": "Produit",
     "product_performance": "Performance par Produit",
     "purchases_count": "{{count}} réappro.",
@@ -69,6 +70,14 @@
     "report_gen_error": "Erreur lors de la génération du rapport",
     "report_generation_error": "Erreur lors de la génération du rapport",
     "report_title": "RAPPORT D'ACTIVITÉ",
+    "pdf_total_revenue": "CA total",
+    "pdf_gross_margin": "Marge brute",
+    "pdf_total_expenses": "Total charges",
+    "pdf_top_products": "Top 10 Produits par Performance",
+    "pdf_expenses_detail": "Détail des Charges",
+    "pdf_no_expenses": "Aucune dépense sur cette période",
+    "pdf_no_address": "Adresse non renseignée",
+    "pdf_generation_error": "Erreur lors de la génération du rapport",
     "revenue": "Chiffre d'Affaires",
     "revenue_breakdown": "Répartition du CA",
     "revenue_info": "Chiffre d'affaires total sur la période sélectionnée.",
@@ -342,7 +351,29 @@
       "errorCode": "Veuillez entrer le code à 6 chiffres",
       "errorIncorrect": "Code incorrect ou expiré",
       "resendTip": "Fonctionnalité de renvoi bientôt disponible"
-    }
+    },
+    "logout_title": "Déconnexion",
+    "logout_confirm": "Voulez-vous vraiment vous déconnecter ?",
+    "logout_btn": "Se déconnecter"
+  },
+  "batch_scan": {
+    "action_required": "Action requise",
+    "choose_action": "Veuillez choisir une action…",
+    "orders_generated": "{{count}} bons de commande générés.",
+    "unknown_codes": "{{count}} codes sont inconnus…",
+    "partial_result": "Résultat partiel",
+    "rfid_bulk_info": "L'association RFID par lot permet d'associer rapidement vos tags.",
+    "title": "Scan Rapide (Lot)",
+    "processing_title": "Traitement du lot",
+    "items_identified": "Articles identifiés",
+    "select_action": "Sélectionner une action",
+    "quick_inventory": "Inventaire rapide",
+    "quick_inventory_desc": "Marquer ces articles comme présents en stock",
+    "auto_replenish": "Réapprovisionnement auto",
+    "auto_replenish_desc": "Générer des bons de commande pour les manquants",
+    "rfid_associate": "Association RFID",
+    "rfid_associate_desc": "Associer ces codes à des tags RFID",
+    "apply_action": "Appliquer l'action"
   },
   "bulk_import": {
     "back": "Retour",
@@ -409,13 +440,28 @@
     "back": "Retour",
     "cancel": "Annuler",
     "confirm": "Confirmer",
+    "count_warning": "Attention à la saisie",
     "currency_default": "FCFA",
+    "currency_short": "F",
     "days_ago": "Il y a {{count}} jours",
     "delete": "Supprimer",
+    "periods": {
+      "7d": "7j",
+      "30d": "30j",
+      "90d": "90j",
+      "1y": "1 an",
+      "custom": "Personnalisé",
+      "from": "Du",
+      "to": "au",
+      "apply": "Appliquer",
+      "last_days": "Derniers {{count}} jours"
+    },
     "description": "Description",
     "edit": "Modifier",
     "error": "Erreur",
+    "generic_error": "Une erreur est survenue.",
     "filter": "Filtrer",
+    "generate": "Générer",
     "info": "Info",
     "items_count": "{{count}} article(s)",
     "language_choice": "Choisir la langue",
@@ -428,24 +474,15 @@
     "none": "Aucun",
     "offline": "Hors ligne",
     "or": "ou",
-    "periods": {
-      "7d": "7j",
-      "30d": "30j",
-      "90d": "90j",
-      "1y": "1 an",
-      "custom": "Personnalisé",
-      "from": "Du",
-      "to": "au",
-      "apply": "Appliquer",
-      "last_days": "Derniers {{count}} jours"
-    },
     "price": "Prix",
     "save": "Enregistrer",
     "search": "Rechercher",
+    "see_feature": "Découvrir cette fonctionnalité",
     "send": "Envoyer",
     "step": "Étape {{step}}/{{total}}",
     "stock": "Stock",
     "success": "Succès",
+    "tip_of_the_day": "CONSEIL DU JOUR",
     "today": "Aujourd'hui",
     "total": "Total",
     "unit": "Unité",
@@ -595,6 +632,8 @@
   "dashboard": {
     "abc_analysis": "Analyse ABC (Priorités)",
     "admin_messages": "Messages de l'administrateur",
+    "ai_daily_summary": "Résumé IA du jour",
+    "ai_tap_to_generate": "Appuyez pour générer",
     "category_distribution": "Répartition par Catégorie",
     "class_a": "Classe A",
     "class_a_desc": "80% de votre CA",
@@ -639,9 +678,11 @@
     "see_less": "Voir moins",
     "see_more": "Voir plus",
     "see_more_count": "Voir les {{count}} autres produits critiques",
+    "smart_reminders": "Rappels Intelligents",
     "smart_replenishment": "Réapprovisionnement Intelligent",
     "statistics": "Statistiques",
     "statistics_btn": "Statistiques",
+    "stats": "Statistiques",
     "status_distribution": "Distribution des statuts",
     "stock_by_category": "Stock par catégorie",
     "stock_evolution": "Evolution Valeur Stock (7j)",
@@ -649,6 +690,7 @@
     "stock_status": "Statut des stocks",
     "stock_value": "Valeur stock",
     "sub_greeting": "Voici l'état de vos stocks",
+    "suggestions_reorder": "Suggestions réappro",
     "threshold": "Seuil",
     "tip_of_day": "ASTUCE DU JOUR",
     "title": "Tableau de bord",
@@ -657,6 +699,21 @@
     "top_products_value": "Top produits (valeur)",
     "total_value": "Valeur totale",
     "units": "unités"
+  },
+  "delivery": {
+    "error_load_suggestions": "Impossible de charger les suggestions",
+    "confirmed_title": "Livraison confirmée",
+    "confirmed_msg": "Le stock a été mis à jour.",
+    "error_confirm": "Impossible de confirmer la livraison",
+    "confirm_reception": "Confirmer la réception",
+    "ai_analysis": "Analyse IA des produits...",
+    "products_to_match": "{{count}} produit(s) à associer",
+    "ai_reason": "IA : {{reason}}",
+    "create_new_product": "Créer un nouveau produit",
+    "associate_for": "Associer : {{name}}",
+    "search_product": "Rechercher un produit...",
+    "no_product_found": "Aucun produit trouvé",
+    "stock_label": "Stock:"
   },
   "help": {
     "faq": {
@@ -1398,11 +1455,20 @@
     "default_unit": "Pièce",
     "delete": "Suppr.",
     "delete_category_error": "Impossible de supprimer la catégorie",
+    "description_placeholder": "Détails...",
     "edit": "Éditer",
     "edit_category": "Modifier la catégorie",
     "expiry_date_label": "Date de Péremption (AAAA-MM-JJ)",
     "export_history_error": "Impossible d'exporter l'historique",
     "export_products_error": "Impossible d'exporter les produits",
+    "batch_number_placeholder_hint": "Ex: LOT2024-001",
+    "expiry_date_placeholder_hint": "Ex: 2025-12-31",
+    "forecast_7d_unit": "{{count}} prédits (7j)",
+    "rfid_reading_not_supported": "La lecture RFID nécessite un matériel compatible connecté. Vous pouvez saisir l'ID manuellement.",
+    "field_description": "Description",
+    "field_name": "Nom",
+    "field_name_placeholder": "Nom du produit...",
+    "field_sku": "SKU / Code",
     "gallery": "Galerie",
     "history": "Hist.",
     "history_tab_price": "Prix",
@@ -1427,6 +1493,7 @@
     "movements_offline": "Les mouvements de stock ne sont pas disponibles hors ligne.",
     "new_category": "Nouvelle catégorie",
     "no_categories": "Aucune catégorie",
+    "no_price_history": "Aucun historique de prix",
     "normal": "Normal",
     "normal_mode": "Mode normal",
     "normal_mode_desc": "Retour au mode de gestion normal.",
@@ -1445,7 +1512,10 @@
     },
     "price_update": "Mise à jour des prix",
     "print_label_rfid": "Imprimer Étiquette RFID",
+    "product_count": "{{count}} produit(s)",
     "products_total": "produits au total",
+    "rfid_hardware_info": "La lecture RFID nécessite un matériel compatible.",
+    "date_format_placeholder": "AAAA-MM-JJ",
     "purchase": "Achat",
     "purchase_price_short": "Achat",
     "qty": "Qté",
@@ -1456,12 +1526,13 @@
     "report_section_stock": "État du stock",
     "rfid_info_msg": "La lecture RFID nécessite un matériel compatible connecté. Vous pouvez saisir l'ID manuellement.",
     "rfid_info_title": "RFID",
-    "search": "Rechercher un produit...",
+    "search_placeholder": "Rechercher un produit...",
     "see_less": "Voir moins",
     "see_more": "Voir plus",
     "see_more_count": "Voir les {{count}} autres mouvements",
     "see_more_sales": "Voir les {{count}} autres ventes",
     "selling": "Vente",
+    "sku_placeholder": "Code-barres...",
     "stock_adjust_error": "Échec de l'ajustement du stock",
     "stock_label": "Stock",
     "stock_movement_in_title": "Entrée de stock pour",
@@ -1568,20 +1639,7 @@
     "version": "Version"
   },
   "store_selector": {
-    "category_placeholder": "Filtrer par catégorie...",
-    "create": "Créer",
-    "create_error": "Impossible de créer le magasin",
-    "default_name": "Mon Magasin",
-    "edit_error": "Impossible de mettre à jour le produit",
-    "edit_success": "Produit mis à jour avec succès",
-    "edit_title": "Modifier le produit",
-    "load_error": "Impossible de charger les magasins",
-    "my_stores": "Mes Magasins",
-    "new_store": "Nouveau magasin",
-    "no_price_history": "Aucun historique de prix",
-    "price_update": "Mise à jour prix",
-    "store_name_placeholder": "Nom du magasin",
-    "switch_error": "Impossible de changer de magasin"
+    "default_name": "Mon Magasin"
   },
   "subscription": {
     "activated_success": "Votre abonnement a été activé avec succès !",
@@ -1826,6 +1884,42 @@
     "with_email": "Avec email",
     "with_phone": "Avec téléphone"
   },
+  "supplier_settings": {
+    "error_company_required": "Le nom de l'entreprise est requis",
+    "error_save": "Impossible de sauvegarder le profil",
+    "page_title": "Paramètres",
+    "role_supplier": "Fournisseur",
+    "commercial_profile": "Profil commercial",
+    "application": "Application",
+    "company_name_label": "Nom de l'entreprise *",
+    "description_label": "Description",
+    "phone_label": "Téléphone",
+    "address_label": "Adresse",
+    "city_label": "Ville",
+    "categories_label": "Catégories (séparées par des virgules)",
+    "zones_label": "Zones de livraison (séparées par des virgules)",
+    "min_order_label": "Montant min commande",
+    "avg_delivery_label": "Délai moyen (jours)",
+    "company_name_ph": "Nom de l'entreprise",
+    "description_ph": "Décrivez votre activité",
+    "address_ph": "Adresse complète",
+    "city_ph": "Ex: Dakar, Abidjan...",
+    "categories_ph": "Alimentaire, Cosmétique, Textile...",
+    "zones_ph": "Dakar, Thiès, St-Louis...",
+    "create_profile": "Créer mon profil",
+    "info_company": "Entreprise",
+    "info_description": "Description",
+    "info_phone": "Téléphone",
+    "info_address": "Adresse",
+    "info_city": "Ville",
+    "info_categories": "Catégories",
+    "info_zones": "Zones de livraison",
+    "info_min_order": "Montant min commande",
+    "info_avg_delivery": "Délai moyen",
+    "info_note": "Note",
+    "days": "jours",
+    "reviews": "avis"
+  },
   "tabs": {
     "accounting": "Compta",
     "activity": "Activité",
@@ -1848,28 +1942,33 @@
     "cancel_btn": "Annuler",
     "create_account_btn": "Créer le compte",
     "crm_label": "Clients (CRM)",
-    "delete_btn": "Supprimer",
-    "delete_user_confirm": "Êtes-vous sûr de vouloir supprimer cet utilisateur ?",
+    "delete_user_btn": "Supprimer l'utilisateur",
+    "delete_user_confirm": "Voulez-vous vraiment supprimer cet utilisateur ?",
     "delete_user_title": "Supprimer l'utilisateur",
-    "edit_access_title": "Modifier Accès",
+    "edit_user_title": "Modifier l'utilisateur",
     "email_label": "Email",
-    "empty_state_desc": "Ajoutez vos vendeurs pour leur donner un accès limité.",
-    "empty_state_title": "Aucun employé configuré",
-    "form_error_fields": "Veuillez remplir tous les champs obligatoires.",
-    "full_name_label": "Nom complet",
-    "full_name_placeholder": "Ex: Jean Dupont",
-    "new_employee_title": "Nouvel Employé",
+    "loading": "Chargement...",
+    "modules_label": "Accès aux modules",
+    "name_label": "Nom complet",
+    "new_user_title": "Nouvel utilisateur",
+    "no_users_found": "Aucun utilisateur trouvé",
+    "orders_label": "Commandes",
     "password_label": "Mot de passe",
-    "password_placeholder": "Min. 8 caractères",
-    "perm_management": "Modification",
-    "perm_no_access": "Pas d'accès",
-    "perm_read_only": "Lecture Seule",
-    "permissions_section_title": "Permissions (Appuyez pour changer)",
-    "pos_label": "Caisse (POS)",
+    "password_placeholder": "Min. 6 caractères",
+    "phone_label": "Téléphone",
+    "pos_label": "Caisse (Ventes)",
+    "products_label": "Stock & Produits",
+    "role_admin": "Propriétaire (Admin)",
+    "role_label": "Rôle",
+    "role_staff": "Vendeur (Staff)",
     "save_btn": "Enregistrer",
-    "stock_label": "Stock & Produits",
+    "search_placeholder": "Rechercher un utilisateur...",
+    "share_whatsapp_btn": "Partager par WhatsApp",
+    "share_whatsapp_msg": "Bonjour {{name}}, voici tes accès pour l'application Stockman : \nEmail: {{email}}\nMot de passe: {{password}}\nLien: https://stockman-app.com",
+    "status_label": "Statut",
     "suppliers_label": "Fournisseurs",
     "title": "Gestion d'Équipe",
+    "user_details_title": "Détails de l'utilisateur",
     "whatsapp_invite_later": "Plus tard",
     "whatsapp_invite_msg": "Bonjour {{name}} !\n\nVoici vos accès pour l'application Stockman :\n📧 Email : {{email}}\n🔑 Mot de passe : {{password}}\n\nVous pouvez accéder à l'application ici : {{url}}\n\nBon travail !",
     "whatsapp_invite_prompt": "Voulez-vous envoyer les accès par WhatsApp ?",
