--- a/frontend/locales/ro.json
+++ b/frontend/locales/ro.json
@@ -421,6 +421,7 @@
     "back": "Înapoi",
     "cancel": "Anulare",
     "confirm": "Confirmă",
+    "count_warning": "Attention à la saisie",
     "currency_default": "FCFA",
     "days_ago": "{{count}} days ago",
     "delete": "Șterge",
@@ -428,6 +429,7 @@
     "edit": "Editează",
     "error": "Eroare",
     "filter": "Filtru",
+    "generate": "Générer",
     "info": "Info",
     "items_count": "{{count}} element(e)",
     "language_choice": "Alege limba",
@@ -455,10 +457,12 @@
     "price": "Prix",
     "save": "Salvează",
     "search": "Căutare",
+    "see_feature": "Découvrir cette fonctionnalité",
     "send": "Envoyer",
     "step": "Étape {{step}}/{{total}}",
     "stock": "Stock",
     "success": "Succes",
+    "tip_of_the_day": "CONSEIL DU JOUR",
     "today": "Today",
     "total": "Total",
     "unit": "Unité",
@@ -618,6 +622,8 @@
   "dashboard": {
     "abc_analysis": "ABC Analysis (Priorities)",
     "admin_messages": "Administrator messages",
+    "ai_daily_summary": "Résumé IA du jour",
+    "ai_tap_to_generate": "Appuyez pour générer",
     "category_distribution": "Category Distribution",
     "class_a": "Class A",
     "class_a_desc": "80% of your revenue",
@@ -664,9 +670,11 @@
     "see_less": "Vezi mai puțin",
     "see_more": "Vezi mai mult",
     "see_more_count": "See {{count}} other critical products",
+    "smart_reminders": "Rappels Intelligents",
     "smart_replenishment": "Smart Replenishment",
     "statistics": "Statistics",
     "statistics_btn": "Statistics",
+    "stats": "Statistiques",
     "status_distribution": "Status distribution",
     "stock_by_category": "Stock by category",
     "stock_evolution": "Evoluția valorii stocului (7z)",
@@ -674,6 +682,7 @@
     "stock_status": "Stare stoc",
     "stock_value": "Valoare stoc",
     "sub_greeting": "Iată starea stocului dvs.",
+    "suggestions_reorder": "Suggestions réappro",
     "threshold": "Threshold",
     "tip_of_day": "TIP OF THE DAY",
     "title": "Panou de control",
@@ -1453,11 +1462,16 @@
     "default_unit": "Pièce",
     "delete": "Șterge",
     "delete_category_error": "Impossible de supprimer la catégorie",
+    "description_placeholder": "Détails...",
     "edit": "Editare",
     "edit_category": "Modifier la catégorie",
     "expiry_date_label": "Date de Péremption (AAAA-MM-JJ)",
     "export_history_error": "Impossible d'exporter l'historique",
     "export_products_error": "Impossible d'exporter les produits",
+    "field_description": "Description",
+    "field_name": "Nom",
+    "field_name_placeholder": "Nom du produit...",
+    "field_sku": "SKU / Code",
     "gallery": "Galerie",
     "history": "Ist.",
     "history_tab_price": "Prix",
@@ -1482,6 +1496,7 @@
     "movements_offline": "Les mouvements de stock ne sont pas disponibles hors ligne.",
     "new_category": "Nouvelle catégorie",
     "no_categories": "Aucune catégorie",
+    "no_price_history": "Aucun historique de prix",
     "normal": "Normal",
     "normal_mode": "Mode normal",
     "normal_mode_desc": "Retour au mode de gestion normal.",
@@ -1500,6 +1515,7 @@
     },
     "price_update": "Mise à jour des prix",
     "print_label_rfid": "Imprimer Étiquette RFID",
+    "product_count": "{{count}} produit(s)",
     "products_total": "produse în total",
     "purchase": "Achat",
     "purchase_price_short": "Achat",
@@ -1512,11 +1528,13 @@
     "rfid_info_msg": "La lecture RFID nécessite un matériel compatible connecté. Vous pouvez saisir l'ID manuellement.",
     "rfid_info_title": "RFID",
     "search": "Caută un produs...",
+    "search_placeholder": "Rechercher un produit...",
     "see_less": "Voir moins",
     "see_more": "Voir plus",
     "see_more_count": "Voir les {{count}} autres mouvements",
     "see_more_sales": "Voir les {{count}} autres ventes",
     "selling": "Vente",
+    "sku_placeholder": "Code-barres...",
     "stock_adjust_error": "Échec de l'ajustement du stock",
     "stock_label": "Stock",
     "stock_movement_in_title": "Entrée de stock pour",
@@ -1892,27 +1910,45 @@
     "create_account_btn": "Créer le compte",
     "crm_label": "Clients (CRM)",
     "delete_btn": "Supprimer",
+    "delete_user_btn": "Supprimer l'utilisateur",
     "delete_user_confirm": "Êtes-vous sûr de vouloir supprimer cet utilisateur ?",
     "delete_user_title": "Supprimer l'utilisateur",
     "edit_access_title": "Modifier Accès",
+    "edit_user_title": "Modifier l'utilisateur",
     "email_label": "Email",
     "empty_state_desc": "Ajoutez vos vendeurs pour leur donner un accès limité.",
     "empty_state_title": "Aucun employé configuré",
     "form_error_fields": "Veuillez remplir tous les champs obligatoires.",
     "full_name_label": "Nom complet",
     "full_name_placeholder": "Ex: Jean Dupont",
+    "loading": "Chargement...",
+    "modules_label": "Accès aux modules",
+    "name_label": "Nom complet",
     "new_employee_title": "Nouvel Employé",
+    "new_user_title": "Nouvel utilisateur",
+    "no_users_found": "Aucun utilisateur trouvé",
+    "orders_label": "Commandes",
     "password_label": "Mot de passe",
     "password_placeholder": "Min. 8 caractères",
     "perm_management": "Modification",
     "perm_no_access": "Pas d'accès",
     "perm_read_only": "Lecture Seule",
     "permissions_section_title": "Permissions (Appuyez pour changer)",
+    "phone_label": "Téléphone",
     "pos_label": "Caisse (POS)",
+    "products_label": "Stock & Produits",
+    "role_admin": "Propriétaire (Admin)",
+    "role_label": "Rôle",
+    "role_staff": "Vendeur (Staff)",
     "save_btn": "Enregistrer",
+    "search_placeholder": "Rechercher un utilisateur...",
+    "share_whatsapp_btn": "Partager par WhatsApp",
+    "share_whatsapp_msg": "Bonjour {{name}}, voici tes accès pour l'application Stockman : \nEmail: {{email}}\nMot de passe: {{password}}\nLien: https://stockman-app.com",
+    "status_label": "Statut",
     "stock_label": "Stock & Produits",
     "suppliers_label": "Fournisseurs",
     "title": "Gestion d'Équipe",
+    "user_details_title": "Détails de l'utilisateur",
     "whatsapp_invite_later": "Plus tard",
     "whatsapp_invite_msg": "Bonjour {{name}} !\n\nVoici vos accès pour l'application Stockman :\n📧 Email : {{email}}\n🔑 Mot de passe : {{password}}\n\nVous pouvez accéder à l'application ici : {{url}}\n\nBon travail !",
     "whatsapp_invite_prompt": "Voulez-vous envoyer les accès par WhatsApp ?",
